fixed spacing

--- a/style.css
+++ b/style.css
@@ -39,6 +39,8 @@ body{
 
 .dice-interface{
     float: right;
+    width: 75%;
+    align-self: center;
 }
 
 
